--- a/web/src/pages/index.astro
+++ b/web/src/pages/index.astro
@@ -1,9 +1,11 @@
 ---
 import Layout from '../layouts/Layout.astro';
 import Card from '../components/Card.astro';
+
+import data from './channels.json';
 ---
 
-<Layout title="Welcome to Astro.">
+<Layout title="HVGOTV">
 	<main>
 		<svg
 			class="astro-a"
@@ -33,32 +35,25 @@ import Card from '../components/Card.astro';
 				</linearGradient>
 			</defs>
 		</svg>
-		<h1>Welcome to <span class="text-gradient">Astro</span></h1>
-		<p class="instructions">
+		<h1>HVGO<span class="text-gradient">TV</span></h1>
+		<!-- <p class="instructions">
 			To get started, open the directory <code>src/pages</code> in your project.<br />
 			<strong>Code Challenge:</strong> Tweak the "Welcome to Astro" message above.
-		</p>
+		</p> -->
 		<ul role="list" class="link-card-grid">
-			<Card
-				href="https://docs.astro.build/"
-				title="Documentation"
-				body="Learn how Astro works and explore the official API docs."
-			/>
-			<Card
-				href="https://astro.build/integrations/"
-				title="Integrations"
-				body="Supercharge your project with new frameworks and libraries."
-			/>
-			<Card
-				href="https://astro.build/themes/"
-				title="Themes"
-				body="Explore a galaxy of community-built starter themes."
-			/>
-			<Card
-				href="https://astro.build/chat/"
-				title="Community"
-				body="Come say hi to our amazing Discord community. ❤️"
-			/>
+			{data.map((emission) => {
+				const { channel, links, resolutions} = emission;
+				return links.map((link, index) => {
+					const resolution = resolutions[index] || 'HD';
+					return <Card
+						href={link}
+						title={channel}
+						body={'Resolución ' + resolution}
+					/>
+				})
+				
+			})}
+			
 		</ul>
 	</main>
 </Layout>
