--- a/web/src/pages/index.astro
+++ b/web/src/pages/index.astro
@@ -37,7 +37,7 @@ import data from './channels.json';
 		</svg>
 		<h1>HVGO<span class="text-gradient">TV</span></h1>
 		 <p class="instructions">
-			Consultar la <a href="./schedule"><strong>agenda deportiva</strong></a>
+			Consultar2 la <a href="./schedule"><strong>agenda deportiva</strong></a>
 		</p>
 		<ul role="list" class="link-card-grid">
 			{data.map((emission) => {
